listcard need fix overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -118,10 +118,10 @@ body {
   left: 0%;
   top: 10%;
   width: 100%;
-  height: 90%;
+  height: 95%;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow: auto;
 }
 /* ANIMATIONS
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
